# dapr-rust-sdk

./: Cargo.toml  build.rs
dapr/proto/common/v1/: common.proto
src/: client.rs
