[package]
name = "dapr"
version = "0.13.0"
authors = ["dapr.io"]
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/dapr/rust-sdk"
description = "Rust SDK for dapr"
readme = "README.md"
keywords = ["microservices", "dapr"]


[dependencies]
tonic = { git = "https://github.com/TaurusM/tonic.git", branch = "main" }
prost = { git = "https://github.com/TaurusM/prost.git", branch = "main" }
bytes = "1"
prost-types = { git = "https://github.com/TaurusM/prost.git", branch = "main", package = "prost-types" }

[build-dependencies]
tonic-build = { git = "https://github.com/TaurusM/tonic.git", branch = "main", package = "tonic-build" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[example]]
name = "client"
path = "examples/client/client.rs"

[[example]]
name = "publisher"
path = "examples/pubsub/publisher.rs"

[[example]]
name = "subscriber"
path = "examples/pubsub/subscriber.rs"

[[example]]
name = "invoke-grpc-client"
path = "examples/invoke/grpc/client.rs"

[[example]]
name = "invoke-grpc-server"
path = "examples/invoke/grpc/server.rs"

[[example]]
name = "invoke-grpc-proxying-client"
path = "examples/invoke/grpc-proxying/client.rs"

[[example]]
name = "invoke-grpc-proxying-server"
path = "examples/invoke/grpc-proxying/server.rs"
