[package]
name = "dapr"
version = "0.13.0"
authors = ["dapr.io"]
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/dapr/rust-sdk"
description = "Rust SDK for dapr"
readme = "README.md"
keywords = ["microservices", "dapr"]


[dependencies]
tonic = { git = "https://github.com/TaurusM/tonic.git", rev = "8357fd0da1fd244304f02a6268df0640fa683f40" }
prost = { git = "https://github.com/TaurusM/prost.git", rev = "2e1602874493e9ed1ffaaf2e450be52c0f11dc32" }
bytes = "1"
prost-types = { git = "https://github.com/TaurusM/prost.git", rev = "2e1602874493e9ed1ffaaf2e450be52c0f11dc32", package = "prost-types" }
serde = { version = "1.0.145", features = ["derive"] }

[build-dependencies]
tonic-build = { git = "https://github.com/TaurusM/tonic.git", rev = "8357fd0da1fd244304f02a6268df0640fa683f40", package = "tonic-build" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[example]]
name = "client"
path = "examples/client/client.rs"

[[example]]
name = "publisher"
path = "examples/pubsub/publisher.rs"

[[example]]
name = "subscriber"
path = "examples/pubsub/subscriber.rs"

[[example]]
name = "invoke-grpc-client"
path = "examples/invoke/grpc/client.rs"

[[example]]
name = "invoke-grpc-server"
path = "examples/invoke/grpc/server.rs"

[[example]]
name = "invoke-grpc-proxying-client"
path = "examples/invoke/grpc-proxying/client.rs"

[[example]]
name = "invoke-grpc-proxying-server"
path = "examples/invoke/grpc-proxying/server.rs"
